# Zoho-

./: README.md
include/: zoho_iot_client.h
projects/basic/: CMakeLists.txt  basic.c
zoho-iot-sdk-c_so/zoho-iot-sdk-c/: CMakeLists.txt  README.md
zoho-iot-sdk-c_so/zoho-iot-sdk-c/include/: zoho_iot_client.h
zoho-iot-sdk-c_so/zoho-iot-sdk-c/lib/paho.mqtt/MQTTClient/src/: MQTTClient.h
zoho-iot-sdk-c_so/zoho-iot-sdk-c/projects/basic/: CMakeLists.txt  basic.c
